[package]
name = "pericortex"
version = "0.2.6"
edition = "2021"
authors = ["Deyan Ginev <d.ginev@jacobs-university.de>"]

[lib]
name = "pericortex"
crate-type = ["lib", "dylib"]

[dependencies]
zmq = "0.10.0"
tempfile = "3.0.7"
hostname = "0.3.0"
log = "0.4.0"
chrono = "0.4.6"
# Process-fleet harness: SIGTERM/SIGINT handling + graceful child termination.
libc = "0.2"