[package]
name = "pericortex"
version = "0.2.8"
edition = "2024"
authors = ["Deyan Ginev <d.ginev@jacobs-university.de>"]
license = "CC0-1.0"
description = "Worker executables and the shared ZeroMQ worker runtime for CorTeX, a processing framework for scientific documents."
repository = "https://github.com/dginev/cortex-peripherals"
readme = "README.md"
keywords = ["cortex", "zeromq", "worker", "distributed", "tex"]
categories = ["science", "concurrency"]

[lib]
name = "pericortex"
crate-type = ["lib", "dylib"]

[dependencies]
zmq = "0.10.0"
tempfile = "3.0.7"
hostname = "0.4.2"
log = "0.4.0"
chrono = "0.4.6"
# Process-fleet harness: SIGTERM/SIGINT handling + graceful child termination.
libc = "0.2"